--- a/package.json
+++ b/package.json
@@ -1,30 +1,52 @@
 {
-  "name": "electron-vite-react",
+  "name": "OVideoPlayer",
   "productName": "Electron",
   "private": true,
   "version": "2.1.0",
-  "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "description": "OVideoPlayer",
+  "author": {
+    "name": "HunterJiang"
+  },
   "license": "MIT",
   "main": "dist-electron/electron/main/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder"
+    "build": "tsc && vite build && electron-builder",
+    "prepare": "npx husky install",
+    "lint": "eslint --cache --fix  --ext .js,.ts,.jsx,.tsx ."
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.18.2",
+    "webdav": "^4.11.2"
+  },
   "devDependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@antfu/eslint-config-react": "0.34.0",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@types/express": "^4.17.15",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "ahooks": "^3.7.2",
+    "antd": "^5.0.7",
+    "artplayer": "^4.5.12",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "less": "^4.1.3",
+    "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
+    "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.56.1",
-    "typescript": "^4.9.3",
+    "typescript": "4.9.4",
     "vite": "^4.0.0",
     "vite-electron-plugin": "^0.5.2",
     "vite-plugin-electron-renderer": "^0.11.3"
@@ -33,5 +55,11 @@
     "env": {
       "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777"
     }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "OVideoPlayer@2.1.0",
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": "eslint --cache --fix --ext .js,.ts,.jsx,.tsx .",
+    "*.{js,jsx,tsx,ts,less,md,json}": "prettier --ignore-unknown --write"
   }
 }
