--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "ext-name": "^5.0.0",
+    "react-player": "^2.11.0",
     "webdav": "^4.11.2"
   },
   "devDependencies": {
@@ -33,7 +35,6 @@
     "@vitejs/plugin-react": "^3.0.0",
     "ahooks": "^3.7.2",
     "antd": "^5.0.7",
-    "artplayer": "^4.5.12",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.29.0",
