--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "ahooks": "^3.7.2",
     "antd": "^5.0.7",
+    "classnames": "^2.3.2",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.29.0",
