--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "node": "^14.18.0 || >=16.0.0"
   },
   "dependencies": {
+    "electron-log": "^4.4.8",
     "express": "^4.18.2",
     "ext-name": "^5.0.0",
     "react-player": "^2.11.0",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4",
     "webdav": "^4.11.2"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@types/express": "^4.17.15",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
