--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "ext-name": "^5.0.0",
+    "moviedb-promise": "^3.3.1",
     "react-player": "^2.11.0",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4",
