--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "node": "^14.18.0 || >=16.0.0"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "ext-name": "^5.0.0",
     "moviedb-promise": "^3.3.1",
-    "react-player": "^2.11.0",
+    "plyr-react": "^5.1.2",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4",
     "webdav": "^4.11.2"
@@ -54,6 +55,7 @@
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "typescript": "4.9.4",
     "vite": "^4.0.0",
     "vite-electron-plugin": "^0.5.2",
