--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "dplayer": "^1.27.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "ext-name": "^5.0.0",
     "moviedb-promise": "^3.3.1",
-    "plyr-react": "^5.1.2",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4",
     "webdav": "^4.11.2"
@@ -35,6 +35,7 @@
     "@antfu/eslint-config-react": "0.34.0",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@types/dplayer": "^1.25.2",
     "@types/express": "^4.17.15",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.25",
